[package]
name = "s3mu"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = "3.0.0-beta.2"
env_logger = "0.8.2"
glob = "0.3.0"
log = "0.4.11"
md5 = "0.7.0"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
tokio = { version = "^0.2", features = ["fs"] }
